# dvdcopy

./: .gitignore  Doxyfile  Makefile.am  Makefile.in  README.textile  bootstrap-build  configure  configure.ac
man/: dvdcopy.1
src/: badsectors.cc  badsectors.hh  dump_stream.c  dvdcopy.cc  dvdcopy.hh  dvddrive.cc  dvddrive.hh  dvddump.cc  dvdfile.cc  dvdfile.hh  dvdoutfile.cc  dvdoutfile.hh  dvdreader.cc  dvdreader.hh  headers.hh  main.cc  secdump.cc
