# Declaration of the programs:
bin_PROGRAMS = dvdcopy secdump
# dvddump
dvdcopy_SOURCES = src/main.cc src/headers.hh \
	src/dvdcopy.hh src/dvdcopy.cc \
	src/dvdoutfile.hh src/dvdoutfile.cc \
	src/dvdreader.hh src/dvdreader.cc \
	src/dvdfile.hh src/dvdfile.cc \
	src/dvddrive.hh src/dvddrive.cc \
	src/badsectors.hh src/badsectors.cc

secdump_SOURCES = src/secdump.cc

# dvddump_SOURCES = src/dvddump.cc \
# 	src/dvdreader.hh src/dvdreader.cc \
# 	src/headers.hh
