# Declaration of the programs:
bin_PROGRAMS = dvdcopy secdump dump_stream
# dvddump
dvdcopy_SOURCES = src/main.cc src/headers.hh \
	src/dvdcopy.hh src/dvdcopy.cc \
	src/dvdoutfile.hh src/dvdoutfile.cc \
	src/dvdreader.hh src/dvdreader.cc \
	src/dvdfile.hh src/dvdfile.cc \
	src/dvddrive.hh src/dvddrive.cc \
	src/badsectors.hh src/badsectors.cc

secdump_SOURCES = src/secdump.cc

dump_stream_SOURCES = src/dump_stream.c

# dvddump_SOURCES = src/dvddump.cc \
# 	src/dvdreader.hh src/dvdreader.cc \
# 	src/headers.hh
